# cell_project

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
app/: basemodel.py  settings.py  urls.py  views.py
app/templates/: base.html  dashboard.html
areas/: admin.py  area_list.html  forms.py  models.py  urls.py  views.py
areas/migrations/: 0001_initial.py  0002_alter_area_options.py
areas/templates/: area_detail.html  area_list.html
calendar_events/: admin.py  forms.py  models.py  urls.py  views.py
calendar_events/migrations/: 0001_initial.py  0002_alter_calendarevent_description_and_more.py
calendar_events/templates/: calendar_event_create.html  calendar_event_delete.html  calendar_event_detail.html  calendar_event_list.html  calendar_event_update.html
cell_locations/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
cell_locations/migrations/: 0001_initial.py
cell_locations/templates/: cell_location_create.html  cell_location_delete.html  cell_location_detail.html  cell_location_list.html  cell_location_update.html
cell_meetings/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
cell_meetings/migrations/: 0001_initial.py
cell_meetings/templates/: cell_meeting_create.html  cell_meeting_delete.html  cell_meeting_detail.html  cell_meeting_list.html  (+3 more)
cell_members/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
cells/: admin.py  forms.py  models.py  urls.py  views.py
event_types/: admin.py  forms.py  models.py  urls.py  views.py
hosts/: admin.py  forms.py  models.py  urls.py  views.py
leadership_roles/: admin.py  apps.py  forms.py  leadership_r_list.html  models.py  urls.py  views.py
leaderships/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mag_branches/: admin.py  apps.py  models.py
meeting_attendances/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
member_ministries/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
members/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
ministries/: admin.py  forms.py  ministry_list.html  models.py
monthly_attendances/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
person/: admin.py  forms.py  models.py  urls.py  views.py
visitors/: admin.py  forms.py  models.py  urls.py  views.py
(+86 files in other folders)
